--- a/style.css
+++ b/style.css
@@ -1,1 +1,26 @@
+.menu ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	background-color: #333333;
+}
 
+.menu li {
+	float: left;
+	padding: 10px;
+	margin-top: 25px;
+	margin-bottom: 5px;
+}
+
+.menu {
+    display: block;
+  color: white;
+  text-align: center;    
+  text-decoration: none;
+}
+
+.menu li a:hover {
+  background-color: #111111;
+
+}
