--- a/style.css
+++ b/style.css
@@ -45,9 +45,15 @@ body {
   margin-right: auto;
   padding-right: 300px;
   padding-left: 300px;
-}*/
- .images .content {
- 	  display: block;
+}
+/*.content .images {
+ 	display: block;
+  	margin-left: auto;
+  	margin-right: auto;
+ }*/
+ .images {
+  display: block;
   margin-left: auto;
   margin-right: auto;
- }
+  width: 40%;
+}
