--- a/style.css
+++ b/style.css
@@ -51,9 +51,10 @@ body {
   	margin-left: auto;
   	margin-right: auto;
  }*/
- .images {
+ .content p,img,h1,h2,h3,video {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 40%;
+  padding-right: 200px;
+  padding-left: 200px;
 }
