--- a/style.css
+++ b/style.css
@@ -51,10 +51,16 @@ body {
   	margin-left: auto;
   	margin-right: auto;
  }*/
- .content p,img,h1,h2,h3,video {
+ .content p,h1,h2,h3,video {
   display: block;
   margin-left: auto;
   margin-right: auto;
   padding-right: 200px;
   padding-left: 200px;
+}
+
+.images img {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
