--- a/style.css
+++ b/style.css
@@ -57,3 +57,10 @@ body {
 	margin-left: auto;
 	margin-right: auto;
 }
+
+.lista {
+	display: block;
+  	margin-left: auto;
+  	margin-right: auto;
+  	text-align: left;
+}
